feat: edit place preferences safely
